tests/rosetta/out/Elixir/arithmetic-derivative.error
run: exit status 1
** (SyntaxError) invalid syntax found on /tmp/arithmetic-derivative.exs:94:9:
    error: unexpected ( after alias D. Function names and identifiers in Elixir start with lowercase characters or underscore. For example:

        hello_world()
        _starting_with_underscore()
        numb3rs_are_allowed()
        may_finish_with_question_mark?()
        may_finish_with_exclamation_mark!()

    Unexpected token: (
    │
 94 │ 	@spec D(float()) :: float()
    │         ^
    │
    └─ /tmp/arithmetic-derivative.exs:94:9
    (elixir 1.18.3) lib/code.ex:1525: Code.require_file/2
